syntax = "proto3";

package o5.aws.infra.v1.topic;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "o5/aws/deployer/v1/pgmigrate.proto";
import "j5/messaging/v1/annotations.proto";
import "j5/messaging/v1/reqres.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/awsinfra/v1/awsinfra_tpb";

service PostgresRequestTopic {
  option (j5.messaging.v1.config).request.name = "o5-aws-command";
  rpc UpsertPostgresDatabase(UpsertPostgresDatabaseMessage) returns (google.protobuf.Empty) {}
  rpc MigratePostgresDatabase(MigratePostgresDatabaseMessage) returns (google.protobuf.Empty) {}
  rpc CleanupPostgresDatabase(CleanupPostgresDatabaseMessage) returns (google.protobuf.Empty) {}
}

service PostgresReplyTopic {
  option (j5.messaging.v1.config).reply.name = "o5-aws-command";
  rpc PostgresDatabaseStatus(PostgresDatabaseStatusMessage) returns (google.protobuf.Empty) {}
}

message UpsertPostgresDatabaseMessage {
  j5.messaging.v1.RequestMetadata request = 1;
  string migration_id = 2 [(buf.validate.field).string.uuid = true];
  o5.aws.deployer.v1.PostgresCreationSpec spec = 3;
}

message CleanupPostgresDatabaseMessage {
  j5.messaging.v1.RequestMetadata request = 1;
  string migration_id = 2 [(buf.validate.field).string.uuid = true];
  o5.aws.deployer.v1.PostgresCleanupSpec spec = 3;
}

message MigratePostgresDatabaseMessage {
  j5.messaging.v1.RequestMetadata request = 1;
  string migration_id = 2 [(buf.validate.field).string.uuid = true];
  o5.aws.deployer.v1.PostgresMigrationSpec spec = 3;
}

message PostgresDatabaseStatusMessage {
  j5.messaging.v1.RequestMetadata request = 1;
  string migration_id = 2 [(buf.validate.field).string.uuid = true];
  string event_id = 3 [(buf.validate.field).string.uuid = true];
  PostgresStatus status = 4;
  optional string error = 5;
}

enum PostgresStatus {
  POSTGRES_STATUS_UNSPECIFIED = 0;
  POSTGRES_STATUS_STARTED = 1;
  POSTGRES_STATUS_DONE = 2;
  POSTGRES_STATUS_ERROR = 3;
}
